--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -9,3 +9,6 @@ $fondoHeader: $fondoBoton;
 $fondoFormulario: #fefefe;
 $tamanioHeader: 60px;
 $colorLink: #ef4565;
+$fondoError: #ffb3b3;
+$colorError: #cc0f35;
+$disable: #e7e4e4;
