--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -32,3 +32,43 @@
 .espacio {
   margin-top: 1rem;
 }
+
+.center {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 3px solid $colorTexto;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: $fondoBoton;
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
