card de error y succes

--- a/src/sass/formularios.scss
+++ b/src/sass/formularios.scss
@@ -45,8 +45,9 @@ form {
   margin-bottom: 1rem;
   position: relative;
 
-  &.error {
+  & .error {
     color: $colorError;
+    margin: 5px 0px;
   }
 }
 
