--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -12,3 +12,5 @@ $colorLink: #ef4565;
 $fondoError: #ffb3b3;
 $colorError: #cc0f35;
 $disable: #e7e4e4;
+$fondoSucces: #ebfffc;
+$colorSucces: #00947e;
