--- a/src/sass/cards.scss
+++ b/src/sass/cards.scss
@@ -1,21 +1,20 @@
 @mixin cajaEstilos {
-  border-radius: 6px;
-  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%),
-    0 0 0 1px rgb(10 10 10 / 2%);
+	border-radius: 6px;
+	box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
 }
 
 .caja {
-  @include cajaEstilos();
+	@include cajaEstilos();
 }
 
 .card {
-  background-color: $fondoFormulario;
-  @include cajaEstilos();
+	background-color: $fondoFormulario;
+	@include cajaEstilos();
 }
 
 .error {
-  background-color: $fondoError;
-  border-radius: 6px;
-  padding: 5px 8px;
-  margin: 10px 0 1rem;
+	background-color: $fondoError;
+	border-radius: 6px;
+	padding: 5px 8px;
+	margin: 10px 0 1rem;
 }
