--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -66,6 +66,9 @@ header {
 	align-items: center;
 	cursor: pointer;
 	text-decoration: none;
+	margin-bottom: 1rem;
+	border-bottom: 1px solid $colorBordes;
+	padding-bottom: 5px;
 
 	& > * {
 		margin-left: 10px;
