--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -92,3 +92,11 @@ main {
 .espacio-input {
 	margin: 5px 5px 1rem 5px;
 }
+
+.not-found {
+	height: 100vh;
+	padding: 1rem 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
