--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './header.scss';
 @import './Footer.scss';
 @import './iconos.scss';
+@import './graficas.scss';
 
 .contenedor {
 	padding: 0px 10px;
